<resources>
    <string name="app_name">FireBaseSample</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="orders">Orders</string>
    <string name="add_product">Add Product</string>
    <string name="attr">Attributes</string>
    <string name="description">Description</string>
    <string name="bahosi">Bahosi</string>
    <string name="name">Name</string>
    <string name="attributes">Attributes</string>
    <string name="add_attributes">Add Attributes</string>
    <string name="product_name">Product name</string>
</resources>