<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:text="@string/add_product"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView

            android:id="@+id/image"
            android:layout_width="@dimen/_280sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:alpha="0.4"
            android:background="@drawable/back_style_back"
            android:padding="@dimen/_15sdp"
            android:src="@drawable/ic_add_svgrepo_com"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />


        <EditText

            android:id="@+id/et_name"
            android:layout_width="@dimen/_280sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:background="@drawable/back_style_back"
            android:hint="@string/name"
            android:padding="@dimen/_10sdp"
            app:layout_constraintLeft_toLeftOf="@id/image"
            app:layout_constraintRight_toRightOf="@id/image"
            app:layout_constraintTop_toBottomOf="@id/image" />


        <EditText

            android:id="@+id/et_price"
            android:layout_width="@dimen/_280sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/back_style_back"
            android:hint="@string/bahosi"
            android:padding="@dimen/_10sdp"
            android:inputType="number"
            app:layout_constraintLeft_toLeftOf="@id/image"
            app:layout_constraintRight_toRightOf="@id/image"
            app:layout_constraintTop_toBottomOf="@id/et_name" />

        <EditText

            android:id="@+id/et_desc"
            android:layout_width="@dimen/_280sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/back_style_back"
            android:gravity="top"
            android:hint="@string/description"
            android:padding="@dimen/_10sdp"
            app:layout_constraintLeft_toLeftOf="@id/image"
            app:layout_constraintRight_toRightOf="@id/image"
            app:layout_constraintTop_toBottomOf="@id/et_price" />

        <TextView

            android:id="@+id/attr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:text="@string/attributes"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_desc" />

        <androidx.recyclerview.widget.RecyclerView

            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/attr"
            tools:listitem="@layout/item_att" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton

            android:id="@+id/addBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="108dp"
            android:layout_marginBottom="16dp"
            android:background="@color/white"
            android:src="@drawable/ic_baseline_add_24"
            app:layout_constraintBottom_toTopOf="@id/add"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintLeft_toLeftOf="@id/rv"
            app:layout_constraintRight_toRightOf="@id/rv"
            app:layout_constraintTop_toBottomOf="@id/rv"
            app:layout_constraintVertical_bias="1" />

        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/add"
            android:layout_width="@dimen/_280sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/bg_btn_screen"
            android:text="@string/add_product"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv" />


        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>